# kutuphane-eKitap-Arama-Motoru

./: CMakeLists.txt  README.md  avl.c  avl.h  dosya.c  dosya.h  filtre.c  filtre.h  graph.c  graph.h  gui.c  gui.h  kitap.c  kitap.h  kitap.h~  kitaplar.csv  main.c  menu.c  menu.h  search.c  search.h  sort.c  sort.h  stack.c  stack.h  trie.c  trie.h
